# machina

./: .gitignore  CMakeLists.txt  README.md  bootstrap.css  index.html  run-qemu.sh  style.css  toolchain.cmake
.github/workflows/: ccpp.yml
docker/: Dockerfile  entrypoint.sh
fonts/: Tamzen.txt  console-8x16.pbm  fixed-6x13.pbm  monospace-10x16.pbm
kernel/: CMakeLists.txt  kernel.ld
kernel/include/machina/: Heap.hh  Kernel.hh  PMM.hh  VMM.hh
kernel/include/sys/: Device.hh  Display.hh  Font.hh  Mailbox.hh  Memory.hh  PhysicalMemory.hh  Screen.hh  Timer.hh  arm.h  bcm2837.h  compiler.h  device.hh  display.hh  errors.h  exception.h  heap.h  heap.hh  log.h  mailbox.h  mailbox.hh  pmm.h  pmm.hh  procfs.h  ramdsk.h  ramfs.h  soc.h  sync.h  sysio.h  system.h  timer.hh  types.h  uart.h  uart.hh  vfs.h
kernel/source/: Display.cc  Font.cc  Heap.cc  Kernel.cc  Mailbox.cc  Memory.cc  PMM.cc  PhysicalMemory.cc  Screen.cc  System.cc  Timer.cc  VMM.cc  device.cc  display.cc  exception.S  exception.c  heap.c  heap.cc  log.cc  mailbox.c  mailbox.cc  main.cc  operator.cc  pmm.c  pmm.cc  procfs.c  procfs.cc  ramdsk.cc  ramfs.c  ramfs.cc  tamzen-10x20.c  task.cc  timer.cc  uart.c  uart.cc  vfs.c  vfs.cc
kernel/source/arm/: system.S
kernel/source/fs/: simple.cc  simple.h
kernel/source/platform/arm/: CMakeLists.txt  crt.S  ldivmod.S  system.S
kernel/source/platform/arm-rpi/: CMakeLists.txt  armtimer.cc  loctimer.cc  sync.S  systimer.cc
kernel/source/platform/bcm2837/: CMakeLists.txt  crt.S  entrypoint.S
libs/libmc/: CMakeLists.txt
libs/libmc/include/mc/: float.h  memory.h  stdarg.h  stdio.h  stdlib.h  string.h
libs/libmc/source/: CopyMemory.S  CopyMemory16.S  CopyMemory64.S  FillMemory.S  FormatString.cc  StringLength.c  ZeroMemory.c  fcvt.c  memcpy.S  memcpy.c  memcpy16.S  memcpy64.S  memset.S  memset.c  memzero32.S  printf.c  printf.cc  strcmp.c  strcpy.c  string.cc  strlen.c  strncmp.c  strncpy.c  stub.c  vsnprintf.cc  vsprintf.c
machina/: export-font
machina/kernel/: CMakeLists.txt  kernel.ld
machina/kernel/include/sys/: Device.hh  Display.hh  Font.hh  Mailbox.hh  PhysicalMemory.hh  System.hh  Timer.hh  errors.h  soc.h  stdlib.hh  sysio.hh  types.h
machina/kernel/source/: Display.cc  Font.cc  Mailbox.cc  PhysicalMemory.cc  System.cc  console-8x16.inc  monospace-10x16.inc  stdlib.cc
machina/kernel/source/arm/: idiv.S  system.S  uidivmod.S
tools/pbm2mff/source/: main.cc
